yolf_v2_coco.out
2020-08-04 17:46:09.925635: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libnvinfer.so.6'; dlerror: libnvinfer.so.6: cannot open shared object file: No such file or directory
2020-08-04 17:46:09.925802: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libnvinfer_plugin.so.6'; dlerror: libnvinfer_plugin.so.6: cannot open shared object file: No such file or directory
2020-08-04 17:46:09.925835: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:30] Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.
Traceback (most recent call last):
  File "nutshell/yolf_mobilenetv2_coco.py", line 21, in <module>
    import coco
  File "/lfs01/workdirs/alex054u3/nutshell/coco.py", line 135
    for obj in annotations[fileids[idx]]
                                       ^
SyntaxError: invalid syntax
